--- a/cryptocurrency/website/crypto/templates/crypto/home.html
+++ b/cryptocurrency/website/crypto/templates/crypto/home.html
@@ -30,8 +30,8 @@
                         mathematical problems.
                     </p>
                     <hr class="space-sm" />
-                    <a href="" class="btn btn-sm width-190 full-width-sm">Register</a>
-                    <a href="" class="btn btn-border btn-sm width-190 active full-width-sm">Login</a>
+                    <a href="{% url 'register' %}" class="btn btn-sm width-190 full-width-sm">Register</a>
+                    <a href="{% url 'login' %}" class="btn btn-border btn-sm width-190 active full-width-sm">Login</a>
                     <hr class="space-lg" />
                 </div>
                 <div class="col-lg-5 hidden-md">
