--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -44,6 +44,21 @@
             top: 0px !important;
         }
     </style>
+
+    
+
+    
+    <!-- Smartsupp Live Chat script -->
+    <script type="text/javascript">
+        var _smartsupp = _smartsupp || {};
+        _smartsupp.key = '6f4b493c132392aa3d08cb2e88b03c62f02bbb28';
+        window.smartsupp||(function(d) {
+            var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+            s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+            c.type='text/javascript';c.charset='utf-8';c.async=true;
+            c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+        })(document);
+    </script>
 </head>
 
 <body>
@@ -115,10 +130,10 @@
                 <div class="col-lg-4">
                     <h3>Quick Links</h3>
                     <ul class="icon-list icon-line">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Investment</a></li>
-                        <li><a href="">Contact Us</a></li>
-                        <li><a href="">Terms</a></li>
+                        <li><a href="{% url 'home' %}">Home</a></li>
+                        <li><a href="{% url 'investment' %}">Investment</a></li>
+                        <li><a href="{% url 'contact' %}">Contact Us</a></li>
+                        <li><a href="{% url 'faq' %}">Faq</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
