--- a/cryptocurrency/website/crypto/templates/crypto/home.html
+++ b/cryptocurrency/website/crypto/templates/crypto/home.html
@@ -49,10 +49,10 @@
                     <ul class="slider" data-options="arrows:true,nav:false">
 
                         <li>
-                            <a class="img-box img-box-caption"
+                            <a class="img-box img-box-caption " style="::before{content: '';}"
                                 href="#"
                                 data-lightbox-anima="fade-top">
-                                <img src="{% static 'media/image16.jpg' %}" alt="">
+                                <img src="{% static 'media/client2.jpg' %}" alt="">
                                 <span>Rilwanu Az</span>
                             </a>
                         </li>
@@ -100,7 +100,7 @@
                 <div class="grid-box">
                     <div class="grid-item">
                         <div class="cnt-box cnt-box-info boxed" data-href="#">
-                            <a href="#" class="img-box"><img src="{% static 'media/image16.jpg' %}"
+                            <a href="#" class="img-box"><img src="{% static 'media/client.jpg' %}"
                                     alt="" /></a>
                             <div class="caption">
                                 <h2>Investment Management</h2>
@@ -115,8 +115,8 @@
 
                     <div class="grid-item">
                         <div class="cnt-box cnt-box-info boxed" data-href="#">
-                            <a href="#" class="img-box"><img src="{% static 'media/image5.jpg' %}"
-                                    alt="" /></a>
+                            <a href="#" class="img-box"><img src="{% static 'media/client2.jpg' %}"
+                                    alt=""  style="height: 30vh; object-fit: cover;"/></a>
                             <div class="caption">
                                 <h2>Investing and Lending</h2>
                                 <p>
@@ -128,8 +128,8 @@
                     </div>
                     <div class="grid-item">
                         <div class="cnt-box cnt-box-info boxed" data-href="#">
-                            <a href="#" class="img-box"><img src="{% static 'media/image11.jpg' %}"
-                                    alt="" /></a>
+                            <a href="#" class="img-box"><img src="{% static 'media/client3.jpg' %}"
+                                    alt=""  style="object-fit: cover; height: 28vh; width: 100%;"/></a>
                             <div class="caption">
                                 <h2>Transaction and Investment Banking</h2>
                                 <p>
@@ -153,15 +153,15 @@
                         <div class="cnt-box cnt-pricing-table">
                             <div class="top-area">
                                 <h2>STARTER TRADERS</h2>
-                                <div class="price"><span>3.9%</span></div>
+                                <div class="price"><span>3%</span></div>
                                 <p>DAILY FOR 3 DAYS</p>
                             </div>
                             <ul>
-                                <li>Minimum $100</li>
+                                <li>Minimum $50</li>
                                 <li>Maximum $999</li>
-                                <li>total Profit Return: 11.7% </li>
+                                <li>total Profit Return: 6% </li>
 
-                                <li>Referal 3%</li>
+                                <li>Referal 2%</li>
                             </ul>
                             <div class="bottom-area">
                                 <a class="btn btn-border btn-xs" href="{% url 'active' %}">Invest now</a>
@@ -548,23 +548,23 @@
                         <h3>Click here to buy bitcoin</h3>
                         <div class="grid-box">
                             <div class="grid-item">
-                                <a class="img-box" href="../www.coinbase.com/index.html" target="_blank">
-                                    <img src="{% static 'media/exch1.jpg' %}" alt="">
+                                <a class="img-box" href="https://trustwallet.com/" target="_blank">
+                                    <img src="{% static 'media/point1.jpg' %}" alt="" style="height: 30vh; width: 100%; object-fit: cover;">
                                 </a>
                             </div>
                             <div class="grid-item">
-                                <a class="img-box" href="../www.coinmama.com/index7038.html?locale=en" target="_blank">
-                                    <img src="{% static 'media/exch2.jpg' %}" alt="">
+                                <a class="img-box" href="https://www.okx.com/" target="_blank">
+                                    <img src="{% static 'media/point2.jpg' %}" alt="" style="height: 30vh; width: 100%; object-fit: cover;">
                                 </a>
                             </div>
                             <div class="grid-item">
-                                <a class="img-box" href="../www.etoro.com/index.html" target="_blank">
-                                    <img src="{% static 'media/exch3.jpg' %}" alt="">
+                                <a class="img-box" href="https://www.luno.com/en/ng" target="_blank">
+                                    <img src="{% static 'media/point3.jpg' %}" alt="" style="height: 30vh; width: 100%; object-fit: cover;">
                                 </a>
                             </div>
                             <div class="grid-item">
-                                <a class="img-box" href="../www.luno.com/en/index.html" target="_blank">
-                                    <img src="{% static 'media/exch4.jpg' %}" alt="">
+                                <a class="img-box" href="https://accounts.binance.com/" target="_blank">
+                                    <img src="{% static 'media/point4.jpg' %}" style="height: 30vh;" alt="">
                                 </a>
                             </div>
                         </div>
