--- a/cryptocurrency/website/crypto/templates/crypto/home.html
+++ b/cryptocurrency/website/crypto/templates/crypto/home.html
@@ -549,22 +549,22 @@
                         <div class="grid-box">
                             <div class="grid-item">
                                 <a class="img-box" href="https://trustwallet.com/" target="_blank">
-                                    <img src="{% static 'media/point1.jpg' %}" alt="" style="height: 30vh; width: 100%; object-fit: cover;">
+                                    <img src="{% static 'media/point1.jpg' %}" alt="" style="height: 7vh; width: 100%; object-fit: cover;">
                                 </a>
                             </div>
                             <div class="grid-item">
                                 <a class="img-box" href="https://www.okx.com/" target="_blank">
-                                    <img src="{% static 'media/point2.jpg' %}" alt="" style="height: 30vh; width: 100%; object-fit: cover;">
+                                    <img src="{% static 'media/point2.jpg' %}" alt="" style="height: 7vh; width: 100%; object-fit: cover;">
                                 </a>
                             </div>
                             <div class="grid-item">
                                 <a class="img-box" href="https://www.luno.com/en/ng" target="_blank">
-                                    <img src="{% static 'media/point3.jpg' %}" alt="" style="height: 30vh; width: 100%; object-fit: cover;">
+                                    <img src="{% static 'media/point3.jpg' %}" alt="" style="height: 7vh; width: 100%; object-fit: cover;">
                                 </a>
                             </div>
                             <div class="grid-item">
                                 <a class="img-box" href="https://accounts.binance.com/" target="_blank">
-                                    <img src="{% static 'media/point4.jpg' %}" style="height: 30vh;" alt="">
+                                    <img src="{% static 'media/point4.jpg' %}" style="height: 7vh; width: 100%; " alt="">
                                 </a>
                             </div>
                         </div>
