--- a/cryptocurrency/website/crypto/templates/crypto/active.html
+++ b/cryptocurrency/website/crypto/templates/crypto/active.html
@@ -93,7 +93,7 @@
                     }
                 })     
             }
-            else if(option.value === 'Premium' && (amount.value > 5999)){
+            else if(option.value === 'Vip' && (amount.value > 5999)){
                 btn.innerText = "Processing...."
                 $.ajax({
                     url:'/investment_processing/',
