--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -142,6 +142,10 @@
                             <p>Dunhammervej 55932<br>Magleby Langeland, Denmark.</p>
                         </li>
                         <br>
+                        <li><b>Opening hours:</b>
+                            <p>Always Open</p>
+                        </li>
+                        <br>
                         <li><b>Email:</b>
                             <p>support@apex-fortitude.com</p>
                         </li>
