--- a/cryptocurrency/website/crypto/templates/crypto/register.html
+++ b/cryptocurrency/website/crypto/templates/crypto/register.html
@@ -79,8 +79,11 @@
 				{{form.password2}}<i class="fa-solid fa-eye" id="hide2" style="position: absolute; right: 25px; padding-top: 10px;"></i>
 
 			</div>
+			
 		</div>
+		<span>By clicking on register you accepted our terms and condition.</span>
 		<br>
+		
 		<button type="submit" id="reg_submit">Register</button>
 
 		<div class="form-group">
@@ -88,7 +91,6 @@
 		</div>
 	</form>
 </div>
-
 <script>
 	const hidebtn = document.getElementById('hide1');
 	const hidebtn2 = document.getElementById('hide2');
