--- a/cryptocurrency/website/crypto/templates/crypto/activation.html
+++ b/cryptocurrency/website/crypto/templates/crypto/activation.html
@@ -13,14 +13,14 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div style="background-color: #3B3D2E; height: 20vh;">
-                    <img src="{% static 'media/logos.png' %}" alt=""style="display: block; margin: 0 auto; padding-top: 20px; height: 10vh;">
-                    <center><h3 style="color: white; padding-top: 5px;">EMAIL VERIFICATION</h3></center>
+                <div style="background-color: #3B3D2E; height: 15vh;">
+                    <img src="{% static 'media/logos.png' %}" alt=""style="display: block; margin: 0 auto; padding-top: 20px; height: 6vh;">
+                    <center><h3 style="color: white; padding-bottom: 5px;">EMAIL VERIFICATION</h3></center>
                 </div>
                 <div style="padding: 10px 5px;">
                     <p>Hello <strong>{{user}}</strong></p>
                     <p>
-                        We recieved you application sucessfully, welcome to the family, we are here to serve you.
+                        We recieved your application sucessfully, welcome to the family, we are here to serve you.
                         please click on activate below
                         to complete the registeration process.
                     </p>
@@ -30,7 +30,7 @@
                     <br>
                     <p>Thank you for choosing Apexfortitude</p>
                 </div>
-                <div style="background-color: #3B3D2E; height: 20vh; margin-top: 15px; padding-top: 20px;">
+                <div style="background-color: #3B3D2E; height: 15vh; margin-top: 15px; padding-top: 15px;">
                     <center><h6 style="color: white;">&#169;2023Apexfortitude, inc. All rights reserved</h6></center>
                 </div>
             </div>
