--- a/cryptocurrency/website/crypto/templates/crypto/withdrawalmail.html
+++ b/cryptocurrency/website/crypto/templates/crypto/withdrawalmail.html
@@ -13,23 +13,22 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div style="background-color: #3B3D2E; height: 20vh;">
-                    <img src="{% static 'media/logos.png' %}" alt=""style="display: block; margin: 0 auto; padding-top: 20px; height: 10vh;">
-                    <center><h3 style="color: white; padding-top: 5px;">EMAIL VERIFICATION</h3></center>
+                <div style="background-color: #3B3D2E; height: 15vh;">
+                    <img src="{% static 'media/logos.png' %}" alt=""style="display: block; margin: 0 auto; padding-top: 20px; height: 6vh;">
+                    <center><h3 style="color: white; padding-bottom: 5px;">Withdrawal Notification</h3></center>
                 </div>
                 <div style="padding: 10px 5px;">
-                    <p>Dear <strong>{{referal}}</strong></p>
+                    <p>Dear <strong>{{user}}</strong></p>
                     <p>
-                        You have a active referal on Apexfortitude.com
-                        User: {{user}}
-                        Name: {{firstname}} {{lastname}}
+                        your request to withdraw ${{amount}} as been approve
+                        equivalent in {{currency}} as been sent to your wallet address
                         We appreciate your contribution to the family.    
                     </p>
                     <br>
                     <p>Thank you for choosing Apexfortitude</p>
                     <p>Team Apexfortitude</p>
                 </div>
-                <div style="background-color: #3B3D2E; height: 20vh; margin-top: 15px; padding-top: 20px;">
+                <div style="background-color: #3B3D2E; height: 15vh; margin-top: 15px; padding-top: 15px;">
                     <center><h6 style="color: white;">&#169;2023Apexfortitude, inc. All rights reserved</h6></center>
                 </div>
             </div>
