--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -101,8 +101,8 @@
                 </ul>
                 <div class="menu-right">
                     <div class="custom-area">
-                        Support Email<br />
-                        admin@Apex-fortitude.com </div>
+                        support Email<br />
+                        admin@apexfortitude.com </div>
                     <ul class="lan-menu" style="margin-top: 30px;">
                         <li class="dropdown" id="google_translate_element"></li>
                     </ul>
@@ -147,7 +147,7 @@
                         </li>
                         <br>
                         <li><b>Email:</b>
-                            <p>support@apex-fortitude.com</p>
+                            <p>admin@apexfortitude.com</p>
                         </li>
 
                     </ul>
@@ -156,7 +156,7 @@
         </div>
         <div class="footer-bar">
             <div class="container">
-                <span>© 2018 <a href="">Apex-fortitude.com</a>.</span>
+                <span>© 2023 <a href="">apexfortitude.com</a>.</span>
                 <span><a href="">Contact us</a> | <a href="">Terms &
                         Conditions</a></span>
             </div>
