--- a/cryptocurrency/website/crypto/templates/base.html
+++ b/cryptocurrency/website/crypto/templates/base.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>ApexFortitude</title>
     <meta name="description" content="">
 
     <link rel="stylesheet" href="{% static 'custom/css/bootstrap-grid.css' %}">
@@ -93,6 +93,7 @@
                     <li><a href="{% url 'investment' %}">Investment</a></li>
                     <li><a href="{% url 'faq' %}">FAQ</a></li>
                     <li><a href="{% url 'contact' %}">Contact Us</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
                     {% endif %}
                     <li class="nav-label">
                         <a href="#"><span>Call us:</span> VIP ONLY </a>
