--- a/cryptocurrency/website/crypto/templates/base2.html
+++ b/cryptocurrency/website/crypto/templates/base2.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Apex fortitude">
         <meta name="author" content="Łukasz Holeczek">
         <meta name="keyword" content="Investment">
-        <title>Account Proile</title>
+        <title>ApexFortitude</title>
         
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="theme-color" content="#ffffff">
