--- a/cryptocurrency/website/crypto/templates/crypto/faq.html
+++ b/cryptocurrency/website/crypto/templates/crypto/faq.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% load static %} {% block body %}
+{% extends 'base.html' %} {% load static %}
+
+{% block body %}
 
 <header class="header-base">
   <div class="container">
