--- a/cryptocurrency/website/crypto/templates/crypto/referal.html
+++ b/cryptocurrency/website/crypto/templates/crypto/referal.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="vr"></div>
                 <div class="col">
-                    <div class="fs-5 fw-semibold">0</div>
+                    <div class="fs-5 fw-semibold">{% if earning %}${{earning}}{% else %}$0{% endif %}</div>
                     <div class="text-uppercase text-medium-emphasis small">Earnings</div>
                 </div>
             </div>
