--- a/cryptocurrency/website/crypto/templates/crypto/withdrawal.html
+++ b/cryptocurrency/website/crypto/templates/crypto/withdrawal.html
@@ -38,7 +38,7 @@
             error.style.display = 'block'
         }
         else{
-            
+            btn.innerText = 'Processing....'
             $.ajax({
                 url:'/make_withdrawal/',
                 type:'post',
