--- a/cryptocurrency/website/crypto/templates/email/commision.html
+++ b/cryptocurrency/website/crypto/templates/email/commision.html
@@ -15,22 +15,26 @@
             <div class="col-12">
                 <div style="background-color: #3B3D2E; height: 15vh;">
                     <img src="{% static 'media/logos.png' %}" alt=""style="display: block; margin: 0 auto; padding-top: 20px; height: 6vh;">
-                    <center><h3 style="color: white; padding-bottom: 5px;">EMAIL VERIFICATION</h3></center>
+                    <center><h3 style="color: white; padding-bottom: 5px;">REFERRAL COMMISSION</h3></center>
                 </div>
                 <div style="padding: 10px 5px;">
-                    <p>Hello <strong>{{user}}</strong></p>
-                    <p>
-                        We recieved your application sucessfully, welcome to the family, we are here to serve you.
-                        please click on activate below
-                        to complete the registeration process.
+                    <p style="font-size: larger;">Dear <strong>{{user}}</strong></p>
+                    <p style="font-size: larger;">
+                        You have recieved a referral commission of ${{bonus}} from <strong>{{referer}}'s</strong> Investment
                     </p>
                     <br>
-                    <a style="background-color: #3B3D2E; border-radius: 10px; padding: 10px; text-decoration: none; color: white;" href="http://{{domain}}{% url 'verification' uidb64=uid token=token %}">Activate</a>
                     <br>
-                    <br>
-                    <p>Thank you for choosing Apexfortitude</p>
+                    <p style="font-size: larger;">
+                        Thank you for choosing <a href="Apexfortitude.com " style="text-decoration: none; font-size: larger;">Apexfortitude.com</a><br>
+                        Best Regards, <br>
+                        Admin, <br>
+                        <a href="Apexfortitude.com" style="text-decoration: none; font-size: larger;">Apexfortitude.com</a>
+
+                    </p>
                 </div>
                 <div style="background-color: #3B3D2E; height: 15vh; margin-top: 15px; padding-top: 15px;">
+                    <center><p style="text-transform: uppercase; color: white;">Apex-fortitude</p></center>
+                    <center><p style="color: white;">Magleby Langeland, Denmark.</p></center>
                     <center><h6 style="color: white;">&#169;2023Apexfortitude, inc. All rights reserved</h6></center>
                 </div>
             </div>
