--- a/cryptocurrency/website/crypto/templates/email/depositmail.html
+++ b/cryptocurrency/website/crypto/templates/email/depositmail.html
@@ -15,20 +15,28 @@
             <div class="col-12">
                 <div style="background-color: #3B3D2E; height: 15vh;">
                     <img src="{% static 'media/logos.png' %}" alt=""style="display: block; margin: 0 auto; padding-top: 20px; height: 6vh;">
-                    <center><h3 style="color: white; padding-bottom: 5px;">Withdrawal Notification</h3></center>
+                    <center><h3 style="color: white; padding-bottom: 5px;">SUCCESSFUL DEPOSIT</h3></center>
                 </div>
                 <div style="padding: 10px 5px;">
-                    <p>Dear <strong>{{user}}</strong></p>
-                    <p>
-                        your request to withdraw ${{amount}} as been approve
-                        equivalent in {{currency}} as been sent to your wallet address
-                        We appreciate your contribution to the family.    
+                    <p style="font-size: large;">Dear <strong>{{user}}</strong></p>
+                    <p style="font-size: large;">
+                        Your deposit has been approved<br>
+                        Amount: ${{amount}}<br>
                     </p>
                     <br>
-                    <p>Thank you for choosing Apexfortitude</p>
-                    <p>Team Apexfortitude</p>
+                    <br>
+                    <br>
+                    <p style="font-size: larger;">
+                        Thank you for choosing <a href="Apexfortitude.com " style="text-decoration: none; font-size: larger;">Apexfortitude.com</a><br>
+                        Best Regards, <br>
+                        Admin, <br>
+                        <a href="Apexfortitude.com" style="text-decoration: none; font-size: larger;">Apexfortitude.com</a>
+
+                    </p>
                 </div>
                 <div style="background-color: #3B3D2E; height: 15vh; margin-top: 15px; padding-top: 15px;">
+                    <center><p style="text-transform: uppercase; color: white;">Apex-fortitude</p></center>
+                    <center><p style="color: white;">Magleby Langeland, Denmark.</p></center>
                     <center><h6 style="color: white;">&#169;2023Apexfortitude, inc. All rights reserved</h6></center>
                 </div>
             </div>
