--- a/cryptocurrency/website/crypto/templates/crypto/active.html
+++ b/cryptocurrency/website/crypto/templates/crypto/active.html
@@ -40,7 +40,7 @@
 
     btn.addEventListener('click', (e)=>{
         e.preventDefault()
-        if(parseInt(bal.innerText) > parseInt(amount.value) || amount.value == ' ' ){
+        if(parseInt(bal.innerText) >= parseInt(amount.value) || amount.value == ' ' ){
             if (option.value === 'Starter'&& (amount.value < 1000 && amount.value > 49) ){
                 btn.innerText = 'Processing.......'
             $.ajax({
