--- a/cryptocurrency/website/crypto/templates/crypto/register.html
+++ b/cryptocurrency/website/crypto/templates/crypto/register.html
@@ -53,14 +53,13 @@
 
 			</div>
 			<div class="col-lg-6">
-				{{forms.eth_wallet.label_tag}}
-				{{forms.eth_wallet}}
-
-			</div>
-
-			<div class="col-lg-6">
 				{{forms.usdt_trc20_wallet.label_tag}}
 				{{forms.usdt_trc20_wallet}}
+
+			</div>
+			<div class="col-lg-6">
+				{{forms.mobile_number.label_tag}}
+				{{forms.mobile_number}}
 
 			</div>
 			<div class="col-lg-6">
